re PR c++/16706 (ICE in finish_member_declaration, at cp/semantics.c:2126)

PR c++/16706
	* search.c (friend_accessible_p): Increment processing_template_decl
	when deal with TEMPLATE_DECL of SCOPE.

	* g++.dg/template/crash21.C: New test.
	* g++.dg/template/crash22.C: Likewise.

From-SVN: r86484